bedrock.css
/*
 * CSS for Bedrock Linux's website
 * Going for a pastel-colored look, as everyone likes pastel.  Everyone.
 *
 * Background should be #222222 - darkish gray
 * Other colors to work with are:
 * #f0f0f0 - slight offwhite for base foreground
 * #6094db - pastel blue, for section headers
 * #00b371 - pastel green, for links
 * #ff005a - pastel pink, for details
 * #f7f750 - pastel yellow, denoting something that should NOT be copied
 * directly by user
 */

/* body; everything inherits this */

body{
	/* colors */
	background: #181818 url('background.png');
	color: #f0f0f0;
	/* word-wrap */
	max-width: 42em;
	/* center */
	margin: auto;
	/* make text legible */
	text-rendering: optimizeLegibility;
	/* apparently good default fonts */
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

/* header; includes logo and nav block */

#header{
	background-color: #222222;
	padding: 7.5px;
	border: 1px solid #6094db;
	border-radius: 4px;
	height: 85px;
	margin-top: 1em;
}
/* logo */
#logo{
	/* text size/color/shape */
	text-decoration: none;
	font-size: 14px;
	background-color: #181818;
	color: #f0f0f0;
	/* block shape */
	width: 20.5em;
	border-radius: 4px;
	border: 1px solid #6094db;
	display: block;
	float: left;
	margin-right: 6em;
}
/* hover-over-logo changes */
#logo:hover{
	text-decoration: none;
	color: #30d0a0;
}
/* better fit logo into block */
#logoshrinkwrap{
	margin-top: -14px;
	margin-left: 10px;
}
/* nav block */
#navvert{
	list-style-type: none;
	line-height: 200%;
	margin-top: -4pt;
}
#navhoriz{
	list-style-type: none;
	font-weight: bold;
}
#navhoriz li{
	display: inline;
	margin-right: 12px;
}

/* footer */

#footer{
	background-color: #222222;
	border: 1px solid #6094db;
	border-radius: 4px;
	margin-top: 1em;
	height: 2em;
}

#footer ul{
	list-style-type: none;
	line-height: 200%;
	margin-top: 0px;
}
#footer li{
	display: inline;
	margin-right: 45px;
}


/* main content block */

#main{
	background-color: #222222;
	padding-left: 20px;
	padding-right: 20px;
	border: 1px solid #6094db;
	border-radius: 4px;
	margin-top: 1em;
	line-height: 150%;
}

/* hyperlinks */

a{
	text-decoration: none;
	color: #00b070
}
a:hover{
	text-decoration: underline;
	color: #30d0a0;
}

/* headings */

h1,h2,h3{
	color: #6094db;
	font-weight: bold;
}
h1 {
	font-size: 30px;
	line-height: 36px;
}
h2 {
	font-size: 24px;
	line-height: 36px;
}
h3 {
	font-size: 18px;
	line-height: 27px;
}

/* small, de-emphasized text */

small{
	color: #999999;
}

/* code */

/* this is used for things that should be monospaced, like filesystem paths and
 * variable names */
code{
	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
	color: #ff005a;
	font-size: 12px;
}
/* multi-line contents of files */
pre.file{
	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
	color: #ff005a;
	font-size: 12px;
	white-space:pre-wrap;
}
/* this is code that needs to be run by the end-user */
pre.cmd{
	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
	border: 1px solid #f0f0f0;
	background-color: #181818;
	color: #ff005a;
	padding: 5px 5px;
	font-size: 12px;
	border-radius: 3px;
	white-space:pre-wrap;
}
/* fancy prompt that won't be selected for clean copy/pasting */
pre.cmd:before{
	content: "$ "
}
/* multiple commands in one block */
ul.cmd{
	list-style-type: none;
	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
	border: 1px solid #f0f0f0;
	background-color: #181818;
	color: #ff005a;
	font-size: 12px;
	border-radius: 3px;
	padding-left: 5px;
}
ul.cmd li{
	white-space:pre-wrap;
}
ul.cmd li:before{
	content: "$ "
}
/* this is code that needs to be run by the end-user as root */
pre.rcmd{
	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
	border: 1px solid #f0f0f0;
	background-color: #181818;
	color: #ff005a;
	padding: 5px 5px;
	font-size: 12px;
	border-radius: 3px;
	white-space:pre-wrap;
}
/* fancy prompt that won't be selected for clean copy/pasting */
pre.rcmd:before{
	content: "# "
}
/* multiple commands in one block */
ul.rcmd{
	list-style-type: none;
	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
	border: 1px solid #f0f0f0;
	background-color: #181818;
	color: #ff005a;
	font-size: 12px;
	border-radius: 3px;
	padding-left: 5px;
}
ul.rcmd li{
	white-space:pre-wrap;
}
ul.rcmd li:before{
	content: "# "
}

/* this is code that needs to be run by the end-user as root */
pre.rcmd{
	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
	border: 1px solid #f0f0f0;
	background-color: #181818;
	color: #ff005a;
	padding: 5px 5px;
	font-size: 12px;
	border-radius: 3px;
	white-space:pre-wrap;
}
/* this is something which should not be copied literally by end-user when
 * following instructions, but replaced with something else*/
code.changethis{
	color: #f7f750;
}
code.changethis:before{
	content: "<"
}
code.changethis:after{
	content: ">"
}

